--- a/index.html
+++ b/index.html
@@ -402,9 +402,12 @@
                                             <div class="card-header" id="headingOne">
                                                 <h5 class="mb-0">
                                                     <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                                        Session - Programming Languages & Development Complexity (55')
+                                                        Session - Programming Languages & Development Complexity
                                                     </button>
                                                 </h5>
+                                                <br>
+                                                <p style="font-size: 15px; margin-left: 30px;"><span style="color: #f4623a">Duration</span> - 55'</p>
+                                                <p style="font-size: 15px; margin-left: 30px;"><span style="color: #f4623a">Session Chair</span> - Pierre-Yves Schobbens</p>
                                             </div>
                                             <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#sessionOne">
                                                 <div class="card-body">
@@ -421,21 +424,13 @@
                                                             <tr>
                                                                 <td>10:45</td>
                                                                 <td>
-                                                                    <i class="fas fa-bullhorn"></i>
-                                                                    Challenges in Comparing Code Maintainability across Different Programming Languages
-                                                                </td>
-                                                                <td>Christophe Ponsard, Gustavo Ospina and Denis Darquennes</td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td>10:50</td>
-                                                                <td>
                                                                     <i class="fas fa-file-alt"></i>
                                                                     Pyttern: a Python-Based Program Query Language
                                                                 </td>
                                                                 <td>Julien Liénard, Kim Mens and Siegfried Nijssen</td>
                                                             </tr>
                                                             <tr>
-                                                                <td>11:10</td>
+                                                                <td>11:05</td>
                                                                 <td>
                                                                     <i class="fas fa-file-alt"></i>
                                                                     Application of Programming Cocktails Identity Cards to Development Complexity Analysis
@@ -458,9 +453,12 @@
                                             <div class="card-header" id="headingTwo">
                                                 <h5 class="mb-0">
                                                     <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-                                                        Session - Software Ecosystems (40')
+                                                        Session - Software Ecosystems
                                                     </button>
                                                 </h5>
+                                                <br>
+                                                <p style="font-size: 15px; margin-left: 30px;"><span style="color: #f4623a">Duration</span> - 40'</p>
+                                                <p style="font-size: 15px; margin-left: 30px;"><span style="color: #f4623a">Session Chair</span> - Tom Mens</p>
                                             </div>
                                             <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#sessionTwo">
                                                 <div class="card-body">
@@ -491,7 +489,7 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td>12:10 - 13:30</td>
+                                <td>12:05 - 13:30</td>
                                 <td>Lunch Break & Poster Session</td>
                             </tr>
                             <tr>
@@ -502,9 +500,12 @@
                                             <div class="card-header" id="h3">
                                                 <h5 class="mb-0">
                                                     <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#c3" aria-expanded="true" aria-controls="c3">
-                                                        Session - Static Analysis (80')
+                                                        Session - Static Analysis
                                                     </button>
                                                 </h5>
+                                                <br>
+                                                <p style="font-size: 15px; margin-left: 30px;"><span style="color: #f4623a">Duration</span> - 80'</p>
+                                                <p style="font-size: 15px; margin-left: 30px;"><span style="color: #f4623a">Session Chair</span> - Maxime André</p>
                                             </div>
                                             <div id="c3" class="collapse show" aria-labelledby="h3" data-parent="#s3">
                                                 <div class="card-body">
@@ -562,9 +563,12 @@
                                             <div class="card-header" id="h4">
                                                 <h5 class="mb-0">
                                                     <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#c4" aria-expanded="true" aria-controls="c4">
-                                                        Session - Software Repositories (80')
+                                                        Session - Software Repositories
                                                     </button>
                                                 </h5>
+                                                <br>
+                                                <p style="font-size: 15px; margin-left: 30px;"><span style="color: #f4623a">Duration</span> - 75'</p>
+                                                <p style="font-size: 15px; margin-left: 30px;"><span style="color: #f4623a">Session Chair</span> - Vadim Zaytsev</p>
                                             </div>
                                             <div id="c4" class="collapse show" aria-labelledby="h4" data-parent="#s4">
                                                 <div class="card-body">
@@ -665,9 +669,12 @@
                                             <div class="card-header" id="h5">
                                                 <h5 class="mb-0">
                                                     <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#c5" aria-expanded="true" aria-controls="c5">
-                                                        Session - AI Techniques (25')
+                                                        Session - AI Techniques
                                                     </button>
                                                 </h5>
+                                                <br>
+                                                <p style="font-size: 15px; margin-left: 30px;"><span style="color: #f4623a">Duration</span> - 25'</p>
+                                                <p style="font-size: 15px; margin-left: 30px;"><span style="color: #f4623a">Session Chair</span> - Maxime Cordy</p>
                                             </div>
                                             <div id="c5" class="collapse show" aria-labelledby="h5" data-parent="#s5">
                                                 <div class="card-body">
@@ -722,16 +729,19 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td>11:25 - 11:55</td>
+                                <td>11:25 - 12:00</td>
                                 <td>
                                     <div class="accordion" id="s6">
                                         <div class="card">
                                             <div class="card-header" id="h6">
                                                 <h5 class="mb-0">
                                                     <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#c6" aria-expanded="true" aria-controls="c6">
-                                                        Session - In practice  (30')
+                                                        Session - In practice
                                                     </button>
                                                 </h5>
+                                                <br>
+                                                <p style="font-size: 15px; margin-left: 30px;"><span style="color: #f4623a">Duration</span> - 35'</p>
+                                                <p style="font-size: 15px; margin-left: 30px;"><span style="color: #f4623a">Session Chair</span> - Tom Mens</p>
                                             </div>
                                             <div id="c6" class="collapse show" aria-labelledby="h6" data-parent="#s6">
                                                 <div class="card-body">
@@ -769,6 +779,14 @@
                                                                 </td>
                                                                 <td>Carolin Brandt, Ali Khatami, Mairieli Wessel and Andy Zaidman</td>
                                                             </tr>
+                                                            <tr>
+                                                                <td>11:55</td>
+                                                                <td>
+                                                                    <i class="fas fa-bullhorn"></i>
+                                                                    Challenges in Comparing Code Maintainability across Different Programming Languages
+                                                                </td>
+                                                                <td>Christophe Ponsard, Gustavo Ospina and Denis Darquennes</td>
+                                                            </tr>
                                                         </tbody>
                                                     </table>
                                                 </div>
@@ -782,16 +800,19 @@
                                 <td>Lunch Break & Poster Session</td>
                             </tr>
                             <tr>
-                                <td>13:30 - 15:10</td>
+                                <td>13:30 - 15:00</td>
                                 <td>
                                     <div class="accordion" id="s7">
                                         <div class="card">
                                             <div class="card-header" id="h7">
                                                 <h5 class="mb-0">
                                                     <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#c7" aria-expanded="true" aria-controls="c6">
-                                                        Session - Dynamic Analysis and Testing (100')
+                                                        Session - Dynamic Analysis and Testing
                                                     </button>
                                                 </h5>
+                                                <br>
+                                                <p style="font-size: 15px; margin-left: 30px;"><span style="color: #f4623a">Duration</span> - 90'</p>
+                                                <p style="font-size: 15px; margin-left: 30px;"><span style="color: #f4623a">Session Chair</span> - Mike Papadakis</p>
                                             </div>
                                             <div id="c7" class="collapse show" aria-labelledby="h7" data-parent="#s7">
                                                 <div class="card-body">
@@ -822,7 +843,7 @@
                                                                 <td>Gilles Coremans and Coen De Roover</td>
                                                             </tr>
                                                             <tr>
-                                                                <td>14:25</td>
+                                                                <td>14:15</td>
                                                                 <td>
                                                                     <i class="fas fa-bullhorn"></i>
                                                                     ANAnSI - Towards an Automated Network Analysis for Real-Time Security Investigations<br>
@@ -830,7 +851,7 @@
                                                                 <td>Guillaume Nguyen</td>
                                                             </tr>
                                                             <tr>
-                                                                <td>14:30</td>
+                                                                <td>14:20</td>
                                                                 <td>
                                                                     <i class="fas fa-file-alt"></i>
                                                                     FERRARI: automated FailurE RepRoduction using stAck tRace analysIs<br>
@@ -838,7 +859,7 @@
                                                                 <td>Valeria Pontillo, Maarten Vandercammen, Sarah Verbelen and Coen De Roover</td>
                                                             </tr>
                                                             <tr>
-                                                                <td>14:50</td>
+                                                                <td>14:40</td>
                                                                 <td>
                                                                     <i class="fas fa-file-alt"></i>
                                                                     Resilience Testing of Spring Applications via Fault Injections<br>
@@ -854,7 +875,7 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td>15:10 - 15:15</td>
+                                <td>15:00 - 15:15</td>
                                 <td>Closing Remarks</td>
                             </tr>
                             <tr>
