--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <a class="nav-link js-scroll-trigger" href="#memory">BENEVOL Memory</a>
                     </li>-->
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#organization">Organisation</a>
+                        <a class="nav-link js-scroll-trigger" href="#organisation">Organisation</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#cfp">CFP</a>
@@ -75,6 +75,9 @@
                     <!-- <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#sponsors">Sponsors</a>
                     </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#history">History</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -90,7 +93,7 @@
                     <hr class="divider my-4">
                 </div>
                 <div class="col-lg-12 align-self-baseline text-white">
-                    <h2>The 24th Belgium-Netherlands Software Evolution Workshop</h2>
+                    <h2>The 24th <span style="color:yellow">Be</span>lgium-<span style="color:yellow">Ne</span>therlands Software E<span style="color:yellow">vol</span>ution Workshop</h2>
                     <h2 class="mb-5">Autumn 2025, Enschede, The Netherlands</h2>
                 </div>
             </div>
@@ -113,8 +116,8 @@
         </div>
     </section>
 
-    <!-- organization -->
-    <section class="bg-white page-section" id="organization">
+    <!-- organisation -->
+    <section class="bg-white page-section" id="organisation">
         <div class="container">
             <h2 class="text-center mt-0">Organisation</h2>
             <hr class="divider my-4">
@@ -212,6 +215,71 @@
             <h2 class="text-center mt-0">Venue and Accomodation</h2>
             <hr class="divider my-4">
             TBA
+        </div>
+    </section>
+
+    <section class="bg-light page-section" id="history">
+        <div class="container">
+            <h2 class="text-center mt-0">History</h2>
+            <hr class="divider my-4">
+            <ul>
+                <li>
+                    🇧🇪<a href="https://benevol2024.github.io">BENEVOL 2024</a> in Namur
+                    <!-- (<a href="https://ceur-ws.org/Vol-3567">CEUR 3567</a>) -->
+                </li>
+                <li>
+                    🇳🇱<a href="https://benevol2023.github.io">BENEVOL 2023</a> in Nijmegen
+                    (<a href="https://ceur-ws.org/Vol-3567">CEUR 3567</a>)
+                </li>
+                <li>
+                    🇧🇪<a href="https://benevol2022.github.io">BENEVOL 2022</a> in Mons
+                    (<a href="https://ceur-ws.org/Vol-3245">CEUR 3245</a>)
+                </li>
+                <li>
+                    🇳🇱<a href="https://benevol2021.github.io">BENEVOL 2021</a> in ‘s Hertogenbosch
+                    (<a href="https://ceur-ws.org/Vol-3071">CEUR 3071</a>)
+                </li>
+                <li>
+                    🇱🇺<a href="https://benevol2020.github.io">BENEVOL 2020</a> in Luxembourgh
+                    (<a href="https://ceur-ws.org/Vol-2912">CEUR 2912</a>)
+                </li>
+                <li>
+                    🇧🇪<a href="https://soft.vub.ac.be/benevol2019/">BENEVOL 2019</a> in Brussels
+                    (<a href="https://ceur-ws.org/Vol-2605">CEUR 2605</a>)
+                </li>
+                <li>
+                    🇳🇱<a href="https://se.ewi.tudelft.nl/benevol2018/">BENEVOL 2018</a> in Delft
+                    (<a href="https://ceur-ws.org/Vol-2361">CEUR 2361</a>)
+                </li>
+                <li>
+                    🇧🇪<a href="https://ansymore.uantwerpen.be/events/benevol2017">BENEVOL 2017</a> in Antwerpen
+                    (<a href="https://ceur-ws.org/Vol-2047">CEUR 2047</a>)
+                </li>
+                <li>
+                    🇳🇱<a href="https://benevol2016.wordpress.com">BENEVOL 2016</a> in Utrecht
+                </li>
+                <li>
+                    🇫🇷<a href="https://www.cristal.univ-lille.fr/evolille2015/benevol.html">BENEVOL 2015</a> in Lille
+                </li>
+                <li>
+                    🇳🇱<a href="https://web.archive.org/web/20181031153802/https://benevol.cwi.nl/2014/">BENEVOL 2014</a> in Amsterdam
+                </li>
+                <li>🇧🇪BENEVOL 2013 in Mons</li>
+                <!-- https://www.cetic.be/Seminaire-BENEVOL-2013-1943 -->
+                <li>🇳🇱BENEVOL 2012 in Delft</li>
+                <!-- https://www.slideshare.net/slideshow/benevol-2013-keynote-the-social-software-revolution/15480756 -->
+                <li>🇧🇪<a href="https://soft.vub.ac.be/benevol2011/">BENEVOL 2011</a> in Brussels</li>
+                <li>🇫🇷<a href="https://researchr.org/conference/benevol-2010">BENEVOL 2010</a> in Lille</li>
+                <li>🇧🇪BENEVOL 2009 in Louvain-la-Neuve</li>
+                <!-- https://www.cetic.be/CETIC-au-Workshop-BENEVOL-2009 -->
+                <li>🇳🇱<a href="https://www-set.win.tue.nl/benevol2008/">BENEVOL 2008</a> in Eindhoven</li>
+                <li>🇧🇪<a href="https://staff.info.unamur.be/acl/benevol/">BENEVOL 2007</a> in Namur</li>
+                <li>🇳🇱BENEVOL 2006 in Delft</li>
+                <li>🇧🇪<a href="https://web.archive.org/web/20061018002017/http://restructuring.ulb.ac.be/events/benevol4/">BENEVOL 2005'</a> in Brussels</li>
+                <li>🇳🇱<a href="https://www.program-transformation.org/Transform/BenevolTwoThousandFive">BENEVOL 2005</a> in Eindhoven</li>
+                <li>🇧🇪<a href="https://www.program-transformation.org/Transform/BenevolTwoThousandFour">BENEVOL 2004</a> in Antwerpen</li>
+                <li>🇳🇱<a href="https://www.program-transformation.org/Transform/BenevolTwoThousandThree">BENEVOL 2003</a> in Amsterdam</li>
+            </ul>
         </div>
     </section>
 
