add some people

--- a/index.html
+++ b/index.html
@@ -121,12 +121,60 @@
         <div class="container">
             <h2 class="text-center mt-0">Organisation</h2>
             <hr class="divider my-4">
-            TBA
+            <div class="col-lg-8 mx-auto my-4 text-justify">
+                <div class="row my-4 mx-auto">
+                    <div class="col-lg-4 text-center mx-auto d-block">
+                        <a href="https://grammarware.github.io">
+                            <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/vadim.jpg" alt="Vadim Zaytsev Picture">
+                        </a>
+                        <a href="https://grammarware.github.io">
+                            <h5>Vadim Zaytsev</h5>
+                            <p class="font-weight-light mb-0">
+                                <b>General Chair</b><br/>
+                                UTwente<br/>
+                                The Netherlands
+                            </p>
+                        </a>
+                    </div>
+                    <!--
+                    <div class="col-lg-4 text-center mx-auto d-block">
+                        <a href="https://fernandocastor.github.io">
+                            <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/fernando.jpg" alt="Fernando Castor Picture">
+                        </a>
+                        <a href="https://fernandocastor.github.io">
+                            <h5>Fernando Castor</h5>
+                            <p class="font-weight-light mb-0">
+                                <b>Program Chair</b><br/>
+                                UTwente<br/>
+                                The Netherlands
+                            </p>
+                        </a>
+                    </div>
+                    -->
+                    <div class="col-lg-4 text-center mx-auto d-block">
+                        <a href="https://snail.info.unamur.be/author/benoit-vanderose">
+                            <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/michel.jpg" alt="Benoît Vanderose Picture">
+                        </a>
+                        <a href="https://www.tue.nl/en/research/researchers/michel-chaudron">
+                            <h5>Michel Chaudron</h5>
+                            <p class="font-weight-light mb-0">
+                                <b>Hackathon Chair</b><br/>
+                                TU/e<br/>
+                                The Netherlands
+                            </p>
+                        </a>
+                    </div>
+                </div>
+                <div class="row my-4 mx-auto">
+                    ...more to be announced...
+                </div>
+            </div>
+        </div>
     </section>
 
     <section class="bg-light page-section" id="cfp">
         <div class="container">
-            <h2 class="text-center mt-0">Call for papers</h2>
+            <h2 class="text-center mt-0">Call for Papers</h2>
             <hr class="divider my-4">
             <div class="row">
                 <div class="col-lg-8 mx-auto mt-4 mb-2 text-justify">
