add one local chair

--- a/index.html
+++ b/index.html
@@ -140,6 +140,19 @@
                             </p>
                         </a>
                     </div>
+                    <div class="card">
+                        <a href="https://people.utwente.nl/o.f.sayilir">
+                            <img class="pic" src="img/omer.jpg" alt="Ömer Sayilir Picture">
+                        </a>
+                        <a href="https://people.utwente.nl/o.f.sayilir">
+                            <h5>Ömer Sayilir</h5>
+                            <p class="person">
+                                <b>Local Chair</b><br/>
+                                UTwente<br/>
+                                The Netherlands
+                            </p>
+                        </a>
+                    </div>
                 </div>
                 <div class="row">
                     ...more to be announced...
