add more chairs

--- a/index.html
+++ b/index.html
@@ -112,7 +112,6 @@
                             </p>
                         </a>
                     </div>
-                    <!--
                     <div class="card">
                         <a href="https://fernandocastor.github.io">
                             <img class="pic" src="img/fernando.jpg" alt="Fernando Castor Picture">
@@ -120,13 +119,12 @@
                         <a href="https://fernandocastor.github.io">
                             <h5>Fernando Castor</h5>
                             <p class="person">
-                                <b>Program Chair</b><br/>
+                                <b>Programme Chair</b><br/>
                                 UTwente<br/>
                                 The Netherlands
                             </p>
                         </a>
                     </div>
-                    -->
                     <div class="card">
                         <a href="https://www.tue.nl/en/research/researchers/michel-chaudron">
                             <img class="pic" src="img/michel.jpg" alt="Michel Chaudron Picture">
@@ -146,6 +144,32 @@
                         </a>
                         <a href="https://people.utwente.nl/o.f.sayilir">
                             <h5>Ömer Sayilir</h5>
+                            <p class="person">
+                                <b>Local Chair</b><br/>
+                                UTwente<br/>
+                                The Netherlands
+                            </p>
+                        </a>
+                    </div>
+                    <div class="card">
+                        <a href="https://people.utwente.nl/n.bui">
+                            <img class="pic" src="img/nhat.jpg" alt="Nhat Bui Picture">
+                        </a>
+                        <a href="https://people.utwente.nl/n.bui">
+                            <h5>Nhat Bui</h5>
+                            <p class="person">
+                                <b>Local Chair</b><br/>
+                                UTwente<br/>
+                                The Netherlands
+                            </p>
+                        </a>
+                    </div>
+                    <div class="card">
+                        <a href="https://people.utwente.nl/o.solovyeva">
+                            <img class="pic" src="img/lola.jpg" alt="Lola Solovyeva Picture">
+                        </a>
+                        <a href="https://people.utwente.nl/o.solovyeva">
+                            <h5>Lola Solovyeva</h5>
                             <p class="person">
                                 <b>Local Chair</b><br/>
                                 UTwente<br/>
